@@ -1,6 +1,3 @@
 mobac.mapsources.mappacks.region_europe_dach.ICAOMapsGermany
 mobac.mapsources.mappacks.region_europe_dach.Bergfex
 mobac.mapsources.mappacks.region_europe_dach.HubermediaBavaria
-mobac.mapsources.mappacks.region_europe_dach.OutdooractiveAustria
-mobac.mapsources.mappacks.region_europe_dach.OutdooractiveGermany
-mobac.mapsources.mappacks.region_europe_dach.OutdooractiveSouthTyrol
